horizontal scroll fixed

--- a/css/index.css
+++ b/css/index.css
@@ -86,15 +86,15 @@ footer,
 
 .sticky-wrapper {
   position: sticky;
-  top: 60px;
+  top: 59px;
   width: 100%;
   overflow: hidden;
 }
 
 .element-wrapper {
+  min-width: 100%;
   position: relative;
   display: flex;
-  margin: 0 20px;
 }
 
 .element1 {
